# mason

./: .gitignore  LICENSE  LQR.py  MANIFEST.in  README.md  euler.py  further.ipynb  mason-build  operator.ipynb  operators.py  pyproject.toml  sigma.py  sum.ipynb
examples/: control.ipynb  control.md  data.csv  feedback_system.py  from_csv.py  load.ipynb  loop3.ipynb  mimo_sfg.py  shannon.ipynb  siso_sfg.py  solver.ipynb  solver.md  test.ipynb
mason/: __init__.py  mason-build  solver.py  typing_defs.py  visualize.py
mason/adapters/: __init__.py  control.py
mason/tikz/: Makefile  data.csv  data.tex  ex.csv  ex.tex  ex2.8.csv  ex2.8.tex  load.csv  load.tex  loop3.csv  loop3.tex  mason_build.py
tests/: test_mimo.py  test_siso.py
tikz/: Makefile  mason_build.py
